MultiEPG dark mode style fixes (#1160)
* MultiEPG dark mode style fixes

This change
- sets proper primary theme colour on selected tabs and timer squigcles
- fixes current event highlight background colour in timeline mode
- fixes all-row hover background colour in timeline mode
- removes picon background
- enlarges bouquet links slightly

Known issues:
- picon background removed, will re-implement later

* MultiEPG dark mode style fixes

This change
- sets proper primary theme colour on selected tabs and timer squigcles
- fixes current event highlight background colour in timeline mode
- fixes all-row hover background colour in timeline mode
- removes picon background
- enlarges bouquet links slightly

Known issues:
- picon background removed, will re-implement later

--- a/sourcefiles/modern/css/themes/all-themes.css
+++ b/sourcefiles/modern/css/themes/all-themes.css
@@ -776,6 +776,8 @@
   color: #f44336;
 }
 
+.theme-red .navtab-active,
+.theme-red .epg__event.event--has-timer::after,
 .theme-red .form-group .form-line::after {
   border-color: #f44336;
 }
@@ -865,6 +867,8 @@
   color: #e91e63;
 }
 
+.theme-pink .navtab-active,
+.theme-pink .epg__event.event--has-timer::after,
 .theme-pink .form-group .form-line::after {
   border-color: #e91e63;
 }
@@ -954,6 +958,8 @@
   color: #9c27b0;
 }
 
+.theme-purple .navtab-active,
+.theme-purple .epg__event.event--has-timer::after,
 .theme-purple .form-group .form-line::after {
   border-color: #9c27b0;
 }
@@ -1043,6 +1049,8 @@
   color: #673ab7;
 }
 
+.theme-deep-purple .navtab-active,
+.theme-deep-purple .epg__event.event--has-timer::after,
 .theme-deep-purple .form-group .form-line::after {
   border-color: #673ab7;
 }
@@ -1132,6 +1140,8 @@
   color: #3f51b5;
 }
 
+.theme-indigo .navtab-active,
+.theme-indigo .epg__event.event--has-timer::after,
 .theme-indigo .form-group .form-line::after {
   border-color: #3f51b5;
 }
@@ -1221,6 +1231,8 @@
   color: #2196f3;
 }
 
+.theme-blue .navtab-active,
+.theme-blue .epg__event.event--has-timer::after,
 .theme-blue .form-group .form-line::after {
   border-color: #2196f3;
 }
@@ -1310,6 +1322,8 @@
   color: #03a9f4;
 }
 
+.theme-light-blue .navtab-active,
+.theme-light-blue .epg__event.event--has-timer::after,
 .theme-light-blue .form-group .form-line::after {
   border-color: #03a9f4;
 }
@@ -1399,6 +1413,8 @@
   color: #00bcd4;
 }
 
+.theme-cyan .navtab-active,
+.theme-cyan .epg__event.event--has-timer::after,
 .theme-cyan .form-group .form-line::after {
   border-color: #00bcd4;
 }
@@ -1488,6 +1504,8 @@
   color: #009688;
 }
 
+.theme-teal .navtab-active,
+.theme-teal .epg__event.event--has-timer::after,
 .theme-teal .form-group .form-line::after {
   border-color: #009688;
 }
@@ -1577,6 +1595,8 @@
   color: #4caf50;
 }
 
+.theme-green .navtab-active,
+.theme-green .epg__event.event--has-timer::after,
 .theme-green .form-group .form-line::after {
   border-color: #4caf50;
 }
@@ -1666,6 +1686,8 @@
   color: #8bc34a;
 }
 
+.theme-light-green .navtab-active,
+.theme-light-green .epg__event.event--has-timer::after,
 .theme-light-green .form-group .form-line::after {
   border-color: #8bc34a;
 }
@@ -1756,6 +1778,8 @@
   text-decoration: none !important;
 }
 
+.theme-lime .navtab-active,
+.theme-lime .epg__event.event--has-timer::after,
 .theme-lime .form-group .form-line::after {
   border-color: #cddc39;
 }
@@ -1845,6 +1869,8 @@
   color: #ffe821;
 }
 
+.theme-yellow .navtab-active,
+.theme-yellow .epg__event.event--has-timer::after,
 .theme-yellow .form-group .form-line::after {
   border-color: #ffe821;
 }
@@ -1934,6 +1960,8 @@
   color: #ffc107;
 }
 
+.theme-amber .navtab-active,
+.theme-amber .epg__event.event--has-timer::after,
 .theme-amber .form-group .form-line::after {
   border-color: #ffc107;
 }
@@ -2023,6 +2051,8 @@
   color: #ff9800;
 }
 
+.theme-orange .navtab-active,
+.theme-orange .epg__event.event--has-timer::after,
 .theme-orange .form-group .form-line::after {
   border-color: #ff9800;
 }
@@ -2112,6 +2142,8 @@
   color: #ff5722;
 }
 
+.theme-deep-orange .navtab-active,
+.theme-deep-orange .epg__event.event--has-timer::after,
 .theme-deep-orange .form-group .form-line::after {
   border-color: #ff5722;
 }
@@ -2201,6 +2233,8 @@
   color: #795548;
 }
 
+.theme-brown .navtab-active,
+.theme-brown .epg__event.event--has-timer::after,
 .theme-brown .form-group .form-line::after {
   border-color: #795548;
 }
@@ -2290,6 +2324,8 @@
   color: #9e9e9e;
 }
 
+.theme-grey .navtab-active,
+.theme-grey .epg__event.event--has-timer::after,
 .theme-grey .form-group .form-line::after {
   border-color: #9e9e9e;
 }
@@ -2379,6 +2415,8 @@
   color: #607d8b;
 }
 
+.theme-blue-grey .navtab-active,
+.theme-blue-grey .epg__event.event--has-timer::after,
 .theme-blue-grey .form-group .form-line::after {
   border-color: #607d8b;
 }
@@ -2473,6 +2511,8 @@
   color: #b2b2b2;
 }
 
+.theme-grey-darken-4 .navtab-active,
+.theme-grey-darken-4 .epg__event.event--has-timer::after,
 .theme-grey-darken-4 .form-group .form-line::after {
   border-color: #b2b2b2;
 }
@@ -2562,6 +2602,8 @@
   color: #000;
 }
 
+.theme-black .navtab-active,
+.theme-black .epg__event.event--has-timer::after,
 .theme-black .form-group .form-line::after {
   border-color: #000;
 }
